manifests/frontend/02-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  namespace: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: frontend
